--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Tugas Modul 1 - Kelompok 47</title>
 </head>
 <body>
+    <center>
     <h1>Tugas Modul 1 Praktikum RPLBK</h1>
     <h2>Kelompok 47</h2>
     <ul>
@@ -26,5 +27,6 @@
     </ul>
 
     <script src="./script.js"></script>
+    </center>
 </body>
 </html>
